--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p id='test'></p>
+    <!-- <p id='test'></p> -->
     <div id="map"></div>
 </body>
 </html>
@@ -18,8 +18,11 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPBxClYhkVfh9AoLJGfKLI5ayP28XFIbg"></script>
 <style>
     #map {
-        width: 100%;
-        height: 400px;
+        width: 100vw;
+        height: 100vh;
         background-color: grey;
+    }
+    body{
+        margin: 0px;
     }
 </style>
