--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <!-- <p id='test'></p> -->
+    <canvas id="myCanvas" style="opacity: 0.4; position: absolute;top: 0; left:0; z-index: 4000; "></canvas>
     <div id="map"></div>
+    <script src="smoke.js"></script>
 </body>
 </html>
 
