--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <script src="velocity.min.js"></script>
     <script src="gunzip.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="index.js"></script>
 </head>
 <body>
+    <!-- <nav class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src="g.png" alt="Logo" style="width:40px;">
+        </a>
+    </nav> -->
     <!-- <p id='test'></p> -->
     <canvas id="myCanvas" style="opacity: 0.4; position: absolute;top: 0; left:0; z-index: 4000; "></canvas>
     <div id="map"></div>
