--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav> -->
     <!-- <p id='test'></p> -->
     <canvas id="myCanvas" style="visibility: hidden; width: 200vw; height: 100vh; opacity: 0.55; position: absolute;top: 0; left:0; z-index: 4000; "></canvas>
-    <div id="scene_zero" style="visibility: hidden; opacity: 0; z-index: 3999; background-image: url('0.jpg'); background-size: cover; background-repeat: no-repeat; width: 300vw; height: 100vh; position: absolute;"></div>
+    <div id="scene_zero" style="visibility: hidden; z-index: 3999; background-image: url('0.jpg'); background-size: cover; background-repeat: no-repeat; width: 300vw; height: 100vh; position: absolute;"></div>
     <div id="scene_one" style="visibility: hidden; z-index: 3999; background-image: url('1.jpg'); background-size: cover; background-repeat: no-repeat; width: 200vw; height: 100vh; position: absolute;"></div>
     <div id="scene_two" style="visibility: hidden; z-index: 3999; background-image: url('2.jpg'); background-size: cover; background-repeat: no-repeat; width: 200vw; height: 100vh; position: absolute;filter: brightness(150%);"></div>
     <div id="scene_three" style="visibility: hidden; z-index: 3999; background-image: url('3.jpg'); background-size: cover; background-repeat: no-repeat; width: 200vw; height: 100vh; position: absolute;"></div>
